--- a/projects.html
+++ b/projects.html
@@ -308,11 +308,11 @@
                 </defs>
               </svg>
             </a>
-            <nav>
+            <nav class="page-nav">
               <ul class="nav-list">
-                <li><a href="about.html">Haqqımızda</a></li>
+                <li><a class="nav-list-text" href="about.html">Haqqımızda</a></li>
                 <li class="education">
-                  <a href="education.html"
+                  <a class="nav-list-text" href="education.html"
                     >Tədris proqramları
                     <svg
                       width="12"
@@ -370,7 +370,7 @@
                           />
                         </svg>
                         <div class="drp-text">
-                          <span>Proqramlaşdırma</span>
+                          <a href="./design.html">Proqramlaşdırma</a>
                           <svg
                             class="svg-rotate"
                             width="8"
@@ -389,10 +389,10 @@
                           </svg>
                         </div>
                         <ul class="cascade__drp">
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
                         </ul>
                       </li>
                       <li class="education__drp__item">
@@ -454,7 +454,7 @@
                         </svg>
   
                         <div class="drp-text">
-                          <span>Dizayn</span>
+                          <a href="./design.html">Dizayn</a>
                           <svg
                             class="svg-rotate"
                             width="8"
@@ -517,7 +517,7 @@
                         </svg>
   
                         <div class="drp-text">
-                          <span>Digital marketinq</span>
+                          <a href="./design.html">Digital marketinq</a>
                           <svg
                             width="8"
                             height="12"
@@ -538,9 +538,9 @@
                     </ul>
                   </div>
                 </li>
-                <li><a href="./projects.html">Layihələr</a></li>
-                <li><a href="#regions">Bölgələrdə biz</a></li>
-                <li><a href="contact.html">Əlaqə</a></li>
+                <li><a class="nav-list-text active" href="./projects.html">Layihələr</a></li>
+                <li><a class="nav-list-text" href="#regions">Bölgələrdə biz</a></li>
+                <li><a class="nav-list-text" href="contact.html">Əlaqə</a></li>
               </ul>
               <div class="burger__menu">
                 <span class="open-btn">
@@ -842,7 +842,7 @@
           </section>
        </main>
 
-      <footer>
+       <footer>
         <div class="footer">
          <div class="container">
            <div class="footer-main">
@@ -1038,17 +1038,17 @@
              <div class="footer-main__education">
                <div class="footer-main__list">
                  <ul>
-                   <li><a class="active" href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
+                   <li><a class="active" href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
                  </ul>
                </div>
                <div class="footer-main__about">
                  <ul>
-                   <li><a class="active" href="#">Haqqımızda</a></li>
-                   <li><a class="active" href="#">Layihələr</a></li>
-                   <li><a class="active" href="#">Əlaqə</a></li>
+                   <li><a class="active" href="./about.html">Haqqımızda</a></li>
+                   <li><a class="active" href="./projects.html">Layihələr</a></li>
+                   <li><a class="active" href="./contact.html">Əlaqə</a></li>
                    <li><a href="tel:+99451 234 56 78">+99451 234 56 78</a></li>
                    <li><a href="tel:+99451 234 56 78">+99451 234 56 78</a></li>
                  </ul>
@@ -1202,7 +1202,7 @@
         </div>
         <div class="law">
          <div class="container">
-           <a href="#">@2023 Techcamp Bütün hüquqlar qorunur.</a>
+           <a href="#">@2024 Techcamp Bütün hüquqlar qorunur.</a>
          </div>
        </div>
        </footer>
