--- a/not-found.html
+++ b/not-found.html
@@ -309,9 +309,9 @@
             </a>
             <nav>
               <ul class="nav-list">
-                <li><a href="about.html">Haqqımızda</a></li>
+                <li><a class="nav-list-text" href="about.html">Haqqımızda</a></li>
                 <li class="education">
-                  <a href="education.html"
+                  <a class="nav-list-text" href="education.html"
                     >Tədris proqramları
                     <svg
                       width="12"
@@ -369,7 +369,7 @@
                           />
                         </svg>
                         <div class="drp-text">
-                          <span>Proqramlaşdırma</span>
+                          <a href="./design.html">Proqramlaşdırma</a>
                           <svg
                             class="svg-rotate"
                             width="8"
@@ -388,10 +388,10 @@
                           </svg>
                         </div>
                         <ul class="cascade__drp">
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
-                          <li><span>Proqramlaşdırma</span></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
+                          <li><a href="">Proqramlaşdırma</a></li>
                         </ul>
                       </li>
                       <li class="education__drp__item">
@@ -453,7 +453,7 @@
                         </svg>
   
                         <div class="drp-text">
-                          <span>Dizayn</span>
+                          <a href="./design.html">Dizayn</a>
                           <svg
                             class="svg-rotate"
                             width="8"
@@ -516,7 +516,7 @@
                         </svg>
   
                         <div class="drp-text">
-                          <span>Digital marketinq</span>
+                          <a href="./design.html">Digital marketinq</a>
                           <svg
                             width="8"
                             height="12"
@@ -537,9 +537,9 @@
                     </ul>
                   </div>
                 </li>
-                <li><a href="./projects.html">Layihələr</a></li>
-                <li><a href="#regions">Bölgələrdə biz</a></li>
-                <li><a href="contact.html">Əlaqə</a></li>
+                <li><a class="nav-list-text" href="./projects.html">Layihələr</a></li>
+                <li><a class="nav-list-text" href="#regions">Bölgələrdə biz</a></li>
+                <li><a class="nav-list-text" href="contact.html">Əlaqə</a></li>
               </ul>
               <div class="burger__menu">
                 <span class="open-btn">
@@ -905,17 +905,17 @@
              <div class="footer-main__education">
                <div class="footer-main__list">
                  <ul>
-                   <li><a class="active" href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
-                   <li><a href="#">Tədris proqramları</a></li>
+                   <li><a class="active" href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
+                   <li><a href="./education.html">Tədris proqramları</a></li>
                  </ul>
                </div>
                <div class="footer-main__about">
                  <ul>
-                   <li><a class="active" href="#">Haqqımızda</a></li>
-                   <li><a class="active" href="#">Layihələr</a></li>
-                   <li><a class="active" href="#">Əlaqə</a></li>
+                   <li><a class="active" href="./about.html">Haqqımızda</a></li>
+                   <li><a class="active" href="./projects.html">Layihələr</a></li>
+                   <li><a class="active" href="./contact.html">Əlaqə</a></li>
                    <li><a href="tel:+99451 234 56 78">+99451 234 56 78</a></li>
                    <li><a href="tel:+99451 234 56 78">+99451 234 56 78</a></li>
                  </ul>
@@ -1069,7 +1069,7 @@
         </div>
         <div class="law">
          <div class="container">
-           <a href="#">@2023 Techcamp Bütün hüquqlar qorunur.</a>
+           <a href="#">@2024 Techcamp Bütün hüquqlar qorunur.</a>
          </div>
        </div>
        </footer>
